# MorfingClockIDF

./: CMakeLists.txt  README.md  partitions.csv
components/AsyncMQTT_Generic/: CMakeLists.txt
components/ESP-WiFiSettings/: CMakeLists.txt
components/ESP-WiFiSettings/src/: WiFiSettings.cpp  WiFiSettings.h
components/SmartMatrix/src/: CMakeLists.txt  MatrixEsp32Hub75Refresh_Impl.h  MatrixEsp32Hub75Refresh_NT_Impl.h  MatrixHardware_ESP32_V0.h  SmartMatrix.h  esp32_i2s_parallel.c
components/arduino_ssl_fix/: CMakeLists.txt
components/esp32async__asynctcp/: CMakeLists.txt
components/esp32async__espasyncwebserver/: .component_hash  CHECKSUMS.json  CMakeLists.txt  idf_component.yml
main/: CMakeLists.txt  Mem.cpp  Mem.h  TinyIcons.h  clock.cpp  clock.h  config.h  digit.cpp  digit.h  globals.h  idf_component.yml  main.cpp  matrix_globals.h  weather.cpp  weather.h  web_ota.cpp  web_ota.h  wifi_mqtt.cpp  wifi_mqtt.h
